@@ -1,13 +1,8 @@
 package center.misaki.device.utils;
 
 
-
-import java.util.Base64;
-import java.util.Base64.Encoder;
-import java.util.Base64.Decoder;
-
 import java.io.ByteArrayOutputStream;
-
+import java.io.IOException;
 import java.util.zip.DeflaterOutputStream;
 import java.util.zip.InflaterOutputStream;
 
@@ -54,19 +49,16 @@ public class StringZipUtil {
 
     private static byte[] convertFromBase64(String encdata) {
         byte[] compressed = null;
-        //            compressed = new sun.misc.BASE64Decoder().decodeBuffer(encdata);
-
-        Decoder decoder = Base64.getDecoder();
-        compressed = decoder.decode(encdata);
-//            compressed = new BASE64Decoder().decodeBuffer(encdata);
+        try {
+            compressed = new sun.misc.BASE64Decoder().decodeBuffer(encdata);
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
         return compressed;
     }
 
     private static String convertToBase64(byte[] byteArray) {
-
-        Encoder encoder = Base64.getEncoder();
-        return encoder.encodeToString(byteArray);
-//        return new BASE64Encoder().encode(byteArray);
+        return new sun.misc.BASE64Encoder().encode(byteArray);
     }
 
 }
